fix: Align remove button correctly
At the moment the button ends up shifted down the page, I think due to
the margin. By removing the explicit top, the button ends up fixing
within its parent component.

--- a/common/components/add-another/_add-another.scss
+++ b/common/components/add-another/_add-another.scss
@@ -2,6 +2,5 @@
   .moj-add-another__remove-button {
     position: absolute;
     right: 0;
-    top: 0;
   }
 }
